@@ -3,6 +3,7 @@
  -Fix issue with automated analysis mode ignoring halves/tertiles/quartiles selection. (#647)
  -Rename "output" to "outcome" in automated analysis mode. (#649)
  -Rename "cohort" to "study group". (#650)
+ -Remove purple title bar for automated analysis mode, use yellow highlight on "Auto" instead. (#654)
 
 1.0.9 (December 3, 2021)
  -Rename "inputs" to "predictors" in automated analysis mode.
